# inkbreaker

./: .gitignore  .gitmodules  CMakeLists.txt  InkBreakerConfig.h.in  LICENCE.md  Makefile  README.md  README_GetOpenFileName_exception.txt  build.bat  build.sh  mingw.sh  toolchain-mingw32.cmake
make/: Makefile  Makefile.vc
src/: canvas.cpp  canvas.h  coordinates.cpp  coordinates.h  edit_tool.h  edit_tools.cpp  edit_tools.h  enumerators.h  main.cpp  main_window.cpp  main_window.h  point.h  polygon_tool.h  screen_space.cpp  screen_space.h  selection.cpp  selection.h  shapes.cpp  shapes.h  state.h  tree.cpp  tree.h  tree2.cpp  view2d.cpp  view2d.h  workbench.cpp
src/edit_tools/: bezier_tool.cpp  bezier_tool.h  edit_tool.cpp  edit_tool.h  polygon_tool.cpp  polygon_tool.h
src/io/: io.cpp  io.h
src/objects/: bezier.cpp  bezier.h  object.cpp  object.h  polygon.cpp  polygon.h  shape.cpp  shape.h  shapes.cpp  shapes.h
src/ui/: Window.cpp  Window.h  canvas.h  container.cpp  container.h  events.h  framework.h  style_properties.h  widget.cpp  widget.h
tests/: workbench.cpp
